# orchestra

./: .gitignore  .gitmodules  README.md  docker-compose.yaml  pyproject.toml
context/: architecture.md  orchestra.exploration.evaluation.md  orchestra.exploration.md  plan.md
context/appendices/: appendix-a.md  appendix-b.md
context/stages/: stage1.md  stage2.md  stage3.md  stage4.md  stage5.md  stage6.md
docs/context/: plan.md
examples/brainstorm/: brainstorm.dot  orchestra.yaml
examples/interview/: interview.dot  orchestra.yaml
examples/pr-review/: orchestra.yaml  pr-review.dot
examples/workspace-demo/: add-tests.dot  orchestra.yaml  (+2 more)
stages/: README.md
tests/: test_accelerator.py  test_agent_turn.py  test_agent_turn_cxdb.py  test_backend_contract.py  test_cleanup.py  test_cli.py  test_cli_agent_backend.py  test_cli_doctor.py  test_cli_vars.py  test_cli_wiring.py  test_codergen_dispatcher.py  test_codergen_handler.py  test_commit_message_generator.py  test_conditions.py  test_config.py  test_configurable_simulation.py  test_context.py  test_conversational_backend.py  test_cross_feature.py  test_cxdb_agent_turns.py  test_cxdb_client.py  test_cxdb_fork.py  test_cxdb_storage.py  test_direct_llm_backend.py  test_dot_linting.py  test_dot_parsing.py  test_e2e_llm_integration.py  test_edge_selection.py  test_engine.py  test_events.py  test_execution.py  test_failure_routing.py  test_fan_in_handler.py  test_file_discovery.py  test_git_ops.py  test_git_ops_remote.py  test_git_ops_worktree.py  test_goal_gates.py  test_graph_analysis.py  test_graph_model.py  (+45 more)
(+172 files in other folders)
