[project]
name = "orchestra"
version = "0.1.0"
description = "Pipeline execution engine using DOT graph definitions with CXDB persistence"
requires-python = ">=3.11"
dependencies = [
    "lark",
    "typer",
    "httpx",
    "pydantic",
    "pyyaml",
    "blake3>=1.0.8",
    "msgpack>=1.1.2",
    "langchain-core~=0.3",
    "langchain-anthropic~=0.3",
    "langchain-openai~=0.3",
    "langgraph~=0.4",
    "jinja2~=3.1",
]

[project.scripts]
orchestra = "orchestra.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orchestra"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (require CXDB)",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]
